<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textCapWords"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/whipped_cream"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/chocolate"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editTextTextPersonName"

            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/quantity1"
            style="@style/HeaderTextStyle"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="176dp"
            android:layout_height="59dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="69dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="69dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="69dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/order_summary"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/_0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="111dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/order"
            android:onClick="submitOrder"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="180dp"
            android:layout_height="59dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/reset"
            android:onClick="resetvalues"/>




    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>